# Snake-c-

./: .gitignore  .gitmodules  Apple.cpp  Apple.h  CMakeLists.txt  ClassDiagram.cd  MainMenu.cpp  MainMenu.h  Makefile  Menu.cpp  Menu.h  ModMenu.cpp  ModMenu.h  Points.cpp  Points.h  Prova1.aps  Prova1.vcxproj  Prova1.vcxproj.filters  Prova11.aps  RCa04900  README.md  RenderHead.cpp  RenderHead.h  Snake-c-.sln  ToDo.txt  Version.cpp  Version.h  connection.cpp  connection.h  dependencies.h  firstLaunch.h  images.h  images.rc  main.cpp  premake5.lua  resource.h  setUser.h  snake.h  strings.h  strings_linux.h  (+2 more)
Debug/: vc140.idb
Debug/Prova1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Prova1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Release/Prova1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Prova1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Snake-c-/: CMakeLists.txt  Snake-c-.vcxproj  Snake-c-.vcxproj.filters  premake5.lua
Snake-c-/src/: Points.h  RenderHead.cpp  Snake.cpp  Version.cpp  Version.h  firstLaunch.h  gameThread.h  main.cpp  strings.h  user.h
Snake-c-/src/jsonParser/: SavedData.cpp  saveddata.h
Snake-c-/src/net/: connection.h
bin-int/Release-windows-x86/Snake-c-/: Snake-c-.vcxprojResolveAssemblyReference.cache
src/: Apple.cpp  Apple.h  Points.cpp  RenderHead.cpp  Snake.cpp  Version.cpp  Version.h  firstAccess.confirm  firstLaunch.h  gameThread.h  main.cpp  snake.h  user.h  username
src/jsonParser/: SavedData.cpp  SavedData.h
src/net/: connection.cpp  connection.h
src/strings/: strings_linux.h  strings_win.h
src/xmlParser/: XmlParser.cpp  XmlParser.h
